--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-API_KEY='136f1e5454106df8a74d2fa21f466a6d'
+API_KEY="136f1e5454106df8a74d2fa21f466a6d"
+BASE_URL="https://api.openweathermap.org/data/2.5/weather"
+CITY='Bangalore'
