--- a/src/.env
+++ b/src/.env
@@ -1,1 +1,2 @@
-APi_KEY="136f1e5454106df8a74d2fa21f466a6d"
+API_KEY="136f1e5454106df8a74d2fa21f466a6d"
+BASE_URL="https://api.openweathermap.org/data/2.5/weather"
